sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:4: error: not found: type int
  var c :int = 0
         ^