sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  var trie = false
  var c :int = 0
  while(!trie){
    trie = true
    for (i <- 0 to getNombreValeurs()-2-c ){
      
      if (getValeur(i) > getValeur(i+1)){
        echange(i,i+1)
        trie = false
      }
    }
  }
  
}